--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,9 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.asus.coffeeready"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -36,5 +37,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0';
+
+    implementation "com.firebaseui:firebase-ui-auth:3.3.0"
+    implementation "com.firebaseui:firebase-ui-firestore:3.3.0"
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 }
 apply plugin: 'com.google.gms.google-services'
