--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.firebaseui:firebase-ui-database:0.4.0';
-
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
     implementation "com.firebaseui:firebase-ui-auth:3.3.0"
     implementation "com.firebaseui:firebase-ui-firestore:3.3.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
